# ego_local

./: README.md  ego-config.json  ego-projects.json  jest.config.js  package.json
canisters/: Cargo.toml
canisters/infra/ego_local/actor/: Cargo.toml
canisters/infra/ego_local/actor/src/: actor.rs  main.rs
canisters/infra/ego_local/mod/: Cargo.toml
canisters/infra/ego_local/mod/src/: state.rs  types.rs
clients/tests/: example.test.ts
configs/: ego_local.json
