[package]
name = "ego_local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/actor.rs"
crate-type = ["cdylib"]

[[bin]]
name = "ego-local"
path = "src/main.rs"

[dependencies]
candid = "0.8.4"
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
serde = "1.0"

ego_local_mod = { path = "../mod" }

ego_lib = "0.3.12"
ego_macros = "0.1.14"
ego_types = "0.1.6"